<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ActivityDivisaoIgual">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="64dp"
        android:layout_marginRight="48dp"
        android:background="#FFFFFF">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <ImageView
                android:id="@+id/back"
                android:layout_width="30dp"
                android:layout_height="31dp"
                android:src="@mipmap/back" />

            <TextView
                android:layout_width="match_parent"
                android:layout_height="55dp"
                android:layout_marginTop="38dp"
                android:gravity="center_horizontal|center_vertical"
                android:text="@string/txt_titulo"
                android:textColor="#221f1f"
                android:textSize="24sp"
                android:textStyle="bold" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="39dp"
                android:layout_marginBottom="12dp"
                android:gravity="center_horizontal|center_vertical"
                android:orientation="horizontal">

                <ImageView
                    android:layout_width="24dp"
                    android:layout_height="24dp"
                    android:src="@mipmap/imagem_seta_para_baixo" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginLeft="12dp"
                    android:text="@string/txt_tipo_moeda"
                    android:textColor="#00AB4F"
                    android:textSize="28sp"
                    android:textStyle="bold" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/double_valor_total_conta"
                    android:textColor="#00AB4F"
                    android:textSize="28sp"
                    android:textStyle="bold"
                    android:layout_marginLeft="6dp" />
            </LinearLayout>

            <ScrollView
                android:layout_width="match_parent"
                android:layout_height="324dp">

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:orientation="vertical">

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="148dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="144dp"
                            android:layout_height="134dp"
                            android:layout_marginRight="6dp"
                            android:background="@drawable/radius_item_tela_divisao_igual"
                            android:elevation="4dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp"
                                android:text="@string/txt_item_nome_cliente"
                                android:textColor="#221F1F"
                                android:textSize="24sp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/txt_item_tipo_moeda"
                                    android:textColor="#221F1F"
                                    android:textSize="24sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/double_item_valor_total_conta"
                                    android:textColor="#221F1F"
                                    android:textSize="24sp"
                                    android:textStyle="bold"
                                    android:layout_marginLeft="6dp" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="144dp"
                            android:layout_height="134dp"
                            android:layout_marginRight="6dp"
                            android:background="@drawable/radius_item_tela_divisao_igual"
                            android:elevation="4dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp"
                                android:text="@string/txt_item_nome_cliente"
                                android:textColor="#221F1F"
                                android:textSize="24sp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/txt_item_tipo_moeda"
                                    android:textColor="#221F1F"
                                    android:textSize="24sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/double_item_valor_total_conta"
                                    android:textColor="#221F1F"
                                    android:textSize="24sp"
                                    android:textStyle="bold"
                                    android:layout_marginLeft="6dp" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="148dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="144dp"
                            android:layout_height="134dp"
                            android:layout_marginRight="6dp"
                            android:background="@drawable/radius_item_tela_divisao_igual"
                            android:elevation="4dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp"
                                android:text="@string/txt_item_nome_cliente"
                                android:textColor="#221F1F"
                                android:textSize="24sp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/txt_item_tipo_moeda"
                                    android:textColor="#221F1F"
                                    android:textSize="24sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/double_item_valor_total_conta"
                                    android:textColor="#221F1F"
                                    android:textSize="24sp"
                                    android:textStyle="bold"
                                    android:layout_marginLeft="6dp" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="144dp"
                            android:layout_height="134dp"
                            android:layout_marginRight="6dp"
                            android:background="@drawable/radius_item_tela_divisao_igual"
                            android:elevation="4dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp"
                                android:text="@string/txt_item_nome_cliente"
                                android:textColor="#221F1F"
                                android:textSize="24sp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/txt_item_tipo_moeda"
                                    android:textColor="#221F1F"
                                    android:textSize="24sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/double_item_valor_total_conta"
                                    android:textColor="#221F1F"
                                    android:textSize="24sp"
                                    android:textStyle="bold"
                                    android:layout_marginLeft="6dp" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>

                    <!--<LinearLayout
                        android:layout_width="match_parent"
                        android:layout_height="148dp"
                        android:gravity="center_horizontal|center_vertical"
                        android:orientation="horizontal">

                        <LinearLayout
                            android:layout_width="144dp"
                            android:layout_height="134dp"
                            android:layout_marginRight="6dp"
                            android:background="@drawable/radius_item_tela_divisao_igual"
                            android:elevation="4dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp"
                                android:text="@string/txt_item_nome_cliente"
                                android:textColor="#221F1F"
                                android:textSize="24sp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/txt_item_tipo_moeda"
                                    android:textColor="#221F1F"
                                    android:textSize="24sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/double_item_valor_total_conta"
                                    android:textColor="#221F1F"
                                    android:textSize="24sp"
                                    android:textStyle="bold"
                                    android:layout_marginLeft="6dp" />
                            </LinearLayout>

                        </LinearLayout>

                        <LinearLayout
                            android:layout_width="144dp"
                            android:layout_height="134dp"
                            android:layout_marginRight="6dp"
                            android:background="@drawable/radius_item_tela_divisao_igual"
                            android:elevation="4dp"
                            android:gravity="center_vertical"
                            android:orientation="vertical">

                            <TextView
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp"
                                android:text="@string/txt_item_nome_cliente"
                                android:textColor="#221F1F"
                                android:textSize="24sp" />

                            <LinearLayout
                                android:layout_width="wrap_content"
                                android:layout_height="wrap_content"
                                android:layout_marginLeft="17dp">

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/txt_item_tipo_moeda"
                                    android:textColor="#221F1F"
                                    android:textSize="24sp"
                                    android:textStyle="bold" />

                                <TextView
                                    android:layout_width="wrap_content"
                                    android:layout_height="wrap_content"
                                    android:text="@string/double_item_valor_total_conta"
                                    android:textColor="#221F1F"
                                    android:textSize="24sp"
                                    android:textStyle="bold"
                                    android:layout_marginLeft="6dp" />
                            </LinearLayout>

                        </LinearLayout>

                    </LinearLayout>-->

                </LinearLayout>

            </ScrollView>

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="64dp"
                android:layout_marginTop="46dp"
                android:gravity="center_horizontal">

                <androidx.appcompat.widget.AppCompatButton
                    android:layout_width="150dp"
                    android:layout_height="58dp"
                    android:layout_marginRight="6dp"
                    android:background="@drawable/radius_btn_cancelar_tela_divisao_igual"
                    android:text="@string/btn_cancelar"
                    android:textAllCaps="false"
                    android:textColor="#221F1F"
                    android:textSize="20sp" />

                <Button
                    android:layout_width="150dp"
                    android:layout_height="match_parent"
                    android:layout_marginLeft="6dp"
                    android:backgroundTint="#221F1F"
                    android:text="@string/btn_concordo"
                    android:textColor="#FFFFFF"
                    android:textSize="20sp" />

            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

</androidx.constraintlayout.widget.ConstraintLayout>